# sieve

./: .gitignore  Cargo.toml  README.md
docs/: ABLATION-REPORT.md  FUSION-FIX-REPORT.md  QUALITY-PUSH-REPORT.md  RESEARCH-CONTRACT.md  SEMANTIC-HARD-REPORT.md  SIEVE-FUTURE-SPEC-REVISION-NOTES.md  SIEVE-FUTURE-SPEC.md  ablation-results.json  fusion-fix-normal.json  fusion-fix-semantic-hard.json  quality-push-normal-results.json  quality-push-results.json  semantic-hard-results.json  spec-v0.3.md  spec-v3.1.md
docs/archive/: spec-v0.3.md
scripts/: train_event_reranker.py
sieve-bench/: Cargo.toml
sieve-bench/src/: codesearchnet.rs  embed_runner.rs  eval.rs  lib.rs  main.rs  report.rs  ripgrep_runner.rs  runner.rs  sieve_runner.rs  splade_runner.rs  types.rs
sieve-bench/tests/: harness.rs
sieve-cli/: Cargo.toml
sieve-cli/src/: main.rs
sieve-cli/tests/: cli.rs
sieve-core/: Cargo.toml
sieve-core/benches/: encoder_bench.rs
sieve-core/src/: aliases.rs  chunk.rs  default_queries.rs  df_prior.rs  embed.rs  event_rerank.rs  fusion.rs  lexical.rs  lib.rs  model.rs  semantic_query.rs  semantic_scan.rs  sparse.rs  surface.rs  training_export.rs  vectors.rs  window_score.rs
sieve-core/tests/: candidate_generation_overhaul.rs  chunk.rs  encoder.rs  fusion.rs  lexical.rs  path2_smoke.rs  phase4_batch2.rs  phase4_batch3.rs  raw_scan.rs  semantic.rs
sieve-core/tests/fixtures/: doc_encoder.onnx  query_encoder.onnx
