[workspace]
members = ["sieve-core", "sieve-cli", "sieve-bench"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Carson", "Hermes Agent"]

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
memchr = "2"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
