[package]
name = "sieve-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sieve"
path = "src/main.rs"

[features]
default = ["semantic"]
semantic = ["sieve-core/semantic"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
ignore = { workspace = true }
serde_json = { workspace = true }
sieve-core = { path = "../sieve-core", default-features = false }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"
